fix backend and api errors
